Improve performance, don't use synchronized everywhere